# cdo

./: .gitattributes  .gitignore  .gitmodules  .rake.json  AUTHORS  CITATION  ChangeLog  KnownProblems  Makefile.am  Makefile.in  NEWS  OPERATORS  README  README_MAGICS  Rakefile  aclocal.m4  cdo.settings.in  cdo.spec  cdo.spec.in  configure  configure.ac
config/: config.guess  config.sub  default  test-driver
contrib/: Makefile.am  Makefile.in  cdo.rb  cdoCompletion.bash  cdoCompletion.tcsh  cdoCompletion.zsh  makecompl.rb
contrib/conda/: meta.yaml
contrib/python/: cdo.py  setup.py
contrib/python/optest/: .checklib_pyunittest  README  test_operators
contrib/python/test/: cdo.py  test_cdo.py
contrib/ruby/: ChangeLog  README.rdoc  gemspec
contrib/ruby/lib/: cdo.rb
contrib/ruby/test/: cdo-examples.rb  test_cdo.rb
debug/src/: cdotest
doc/: Doxyfile  OpenMP  cdo_limits  cdo_vs_nco  parameter_table
doc/tex/: Modules  acknowledgment.tex  appendix.tex  bib.tex  bibcmor.tex  bibeca.tex  bibmagics.tex  cdo.tex  cdo_adv.tex  cdo_cmor.tex  cdo_con.tex  cdo_eca.tex  cdo_int.tex  cdo_libdep.tex  cdo_magics.tex  cdo_openmp.tex  cdo_ref.tex  cdo_ref_over.tex  cdoprog.tex  cleanup  cmor_appen.tex  cmor_example.tex  cmor_inst.tex  cmor_int.tex  cmor_intro.tex  cmor_manual.tex  cmor_ref.tex  contributors.tex  eca_int.tex  eca_ref.tex  grid.tex  install.tex  magics_int.tex  magics_ref.tex  makeDistDoc  makedoc  makedoc_cpp  makehtml  makepdf  makepdfcmor  (+29 more)
doc/tex/figures/: plotcollgrid  plotdistgrid  plotremap  plotremapnn  plotsetmisstonn  r2b4_region.nc
doc/tex/grids/: cell.gmt  cell.grid  cell.ps  cell1.gmt  curv.gmt  curv.grid  curv.ps  curv1.gmt  plotjobgmt
doc/tex/logo/: cdo_logo.eps
doc/tex/mod/: Adisit  Afterburner  Arith  Arithc  Arithdays  CMOR  CMORlite  Change  Collgrid  Comp  Compc  Cond  Cond2  Condc  Consecstat  Copy  (+205 more)
m4/: acx_c_check_sizeof_gt_relation.m4  acx_check_doxygen_layout.m4  acx_fc_integer_size.m4  acx_fc_real_size.m4  acx_fc_type_kinds.m4  acx_fortran2003_kinds.m4  acx_fortran_check_libfunc.m4  acx_fortran_check_module.m4  acx_fortran_package.m4  acx_machine_config.m4  acx_options.m4  acx_sl_fc_mod_path_flag.m4  gcc_ac_c_char_bit.m4  starlink_fpp.m4  tj_find_type.m4
src/: .clang-format  Adisit.c  Adisit.cc  Afterburner.c  Afterburner.cc  Arith.c  Arith.cc  Arithc.c  Arithc.cc  Arithdays.c  Arithdays.cc  Arithlat.c  Arithlat.cc  CDIbench.c  CDIread.c  CDIread.cc  CDItest.c  CDItest.cc  CDIwrite.c  CDIwrite.cc  CMOR.c  CMOR.cc  CMOR_lite.c  CMOR_lite.cc  CMOR_table.c  CMOR_table.cc  Cat.c  Cat.cc  CdoMagicsMapper.c  CdoMagicsMapper.cc  CdoMagicsMapper.h  Change.c  Change.cc  Change_e5slm.c  Change_e5slm.cc  Cloudlayer.c  Cloudlayer.cc  Collgrid.c  Collgrid.cc  Command.c  (+759 more)
src/clipping/: area.c  clipping.c  compare_files  geometry.h  geometry_tools.c  grid.h  grid_cell.c  grid_cell.h  intersection.c  interval_tree.h  sphere_part.c  sphere_part.h  utils.c  utils.h
src/json/: jsmn.c  jsmndump.c  jsmnexample.c
src/kdtreelib/: kdtree.h  kdtree_cartesian.c  kdtree_cartesian.cc  kdtree_common.c  kdtree_common.cc  kdtree_spherical.c  kdtree_spherical.cc  pmergesort.c  qsort.c
src/lib/ncl/: Makefile.am  Makefile.in
src/lib/yac/: Makefile.am  area.c  bnd_circle.c  check_overlap.c  clipping.c  clipping.h  compare_files  dep_list.c  geometry.h  grid.c  grid.h  grid_cell.c  grid_cell.h  grid_reg2d.c  grid_reg2d.h  grid_reg2d_common.c  grid_reg2d_common.h  grid_scrip.c  grid_scrip.h  grid_search.c  grid_search.h  grid_search_utils.c  grid_search_utils.h  grid_unstruct.c  grid_unstruct.h  intersection.c  points.c  points.h  sphere_part.c  sphere_part.h
test/: Afterburner.test.in  Arith.test.in  Arithc.test.in  Cat.test.in  Collgrid.test.in  Comp.test.in  Compc.test.in  Copy_netcdf.test.in  Detrend.test.in  EOF.test.in  Enspctl.test.in  Ensstat.test.in  Expr.test.in  File.test.in  Filter.test.in  Fldpctl.test.in  Fldstat.test.in  Genweights.test.in  Gradsdes.test.in  Gridarea.test.in  Gridboxstat.test.in  Makefile  Makefile.am  Makefile.in  MapReduce.test.in  Mergetime.test.in  Merstat.test.in  Multiyearstat.test.in  Ninfo.test.in  Read_grib.test.in  Read_netcdf.test.in  Remap.test.in  Remap2.test.in  Remap3.test.in  Remapeta.test.in  Runpctl.test.in  Runstat.test.in  Seasstat.test.in  Select.test.in  Setmiss.test.in  (+36 more)
test/bandit_tests/: Makefile.am  Makefile.in  chained_operators.cc  createProcessesFromInput.cc  input_file  operator_1_to_1.bandit.cc  operator_1_to_2.bandit.cc  process_creation_tests.cc  variable_inputs_operators.cc  wildcards.cc
test/data/: Makefile.am  Makefile.in  aexpr1_ref  arith1.srv  arithmask.srv  arithmul_ref  eof_ref  eval_ref  expr1.srv  expr1_ref  gen_refdata.sh  grib_testfile03_sinfo_ref  griddes.icon_cell  griddes.ni4  griddes.r18x9  netcdf_testfile01_info_ref  netcdf_testfile01_sinfon_ref  netcdf_testfile02_sinfon_ref  pcoeff00000  pl_data.ctl  psl_DJF_anom.srv  runmax_ref  runmean_ref  runmin_ref  runstd1_ref  runstd_ref  runsum_ref  runvar1_ref  runvar_ref  seasavg_ref  seasmax_ref  seasmin_ref  seaspctl50_ref  seasstd1_ref  seasstd_ref  seassum_ref  seasvar1_ref  seasvar_ref  select1_ref  select2_ref  (+31 more)
test/grid_search/: bisection_search.c  bnd_circle.c  bucket_search.c  bucket_search.h  check_overlap.c  comp  dep_list.c  find_overlapping_cells.c  grid.c  grid_cell.c  grid_cell.h  grid_data.h  grid_reg2_search.c  grid_reg2d.c  grid_reg2d.h  grid_search.c  grid_search.h  grid_search_utils.c  grid_search_utils.h  grid_unstruct.c  grid_unstruct.h  interval_tree.c  interval_tree.h  points.c  reg2d_search.c  reg2d_search.h  search.h  sphere_part.c  sphere_part.h  test_cell_search.c  test_point_search.c  tests.c  tests.h  utils.h
test/grid_search/test1/: grid_data.c  test_cell_search.c
test/grid_search_rtree/: comp  index.c  rect.c  test_glob.c
test/json/: CMIP5_Amon  CMIP6_Amon.json  cleanup  cmip6.json  cmip6.ptl  cmip6_test.json  cmip6_test.ptl  cmor.rc  comp  kvlist.c  par1  par2  parameter.list  parse_literal.c  parse_namelist.c  partab.c  partabdump.c  pmlist.c  select  test.tab
test/simd/: fun.c  memalign.c
