## Process this file with automake to produce Makefile.in
#
bin_PROGRAMS = cdo
#
cdo_SOURCES = Arith.c		\
	      Arithc.c 		\
	      Arithdays.c 	\
	      Cat.c		\
	      Change.c		\
	      Comp.c 		\
	      Compc.c 		\
	      Cond.c 		\
	      Cond2.c 		\
	      Condc.c 		\
	      Copy.c		\
              Detrend.c		\
              Diff.c		\
              Enlarge.c     	\
              Ensstat.c     	\
              Exprf.c     	\
              Filedes.c 	\
              Fillmiss.c 	\
              Fldrms.c 		\
              Fldstat.c 	\
              Gradsdes.c 	\
              Histogram.c 	\
              Info.c		\
              Input.c		\
              Intgrid.c 	\
              Intgridtraj.c 	\
              Inttime.c 	\
              Intyear.c 	\
              Invert.c  	\
              Maskbox.c 	\
              Mastrfu.c 	\
              Math.c   		\
              Merge.c   	\
              Mergegrid.c   	\
              Merstat.c   	\
              Ninfo.c 		\
              Nmltest.c 	\
              Output.c  	\
              Outputgmt.c  	\
              Pinfo.c  	        \
              Remap.c  	        \
              Replace.c  	\
              Rotuv.c     	\
              Runstat.c  	\
              Seasstat.c 	\
              Selbox.c  	\
              Select.c  	\
              Selrec.c  	\
              Selstat.c 	\
              Seltime.c 	\
	      Set.c		\
	      Setgatt.c		\
	      Setgrid.c		\
	      Sethalo.c		\
              Setmiss.c 	\
	      Settime.c		\
	      Setzaxis.c	\
              Showinfo.c	\
              Sinfo.c   	\
              Sort.c      	\
              Specinfo.c	\
              Spectral.c	\
              Split.c   	\
              Splitrec.c 	\
              Splittime.c 	\
              Splityear.c 	\
              Subtrend.c        \
              Templates.c    	\
              Test.c    	\
              Timsort.c 	\
              Timstat.c 	\
              Trend.c  		\
              Trms.c  		\
              Vardup.c  	\
              Vargen.c  	\
              Varrms.c  	\
              Vertint.c 	\
              Vertstat.c 	\
              Wind.c         	\
              Writegrid.c 	\
              Writerandom.c 	\
              Ydaystat.c  	\
	      Ymonarith.c       \
              Ymonstat.c  	\
              Yseasstat.c  	\
              Zonstat.c 	\
	      cdilib.c 		\
              commandline.c 	\
              exception.c 	\
              expr_yacc.h 	\
              expr_yacc.c 	\
              expr_lex.c 	\
              expr.c 		\
              expr.h 		\
              cdo.c		\
              cdo_pthread.c 	\
              cdo_vlist.c 	\
              field.c 		\
              fieldc.c 		\
              field2.c		\
              fieldmer.c  	\
              fieldzon.c  	\
              grid.c		\
              history.c		\
              institution.c 	\
              interpol.c 	\
              modules.c		\
              namelist.c 	\
              normal.c		\
              pipe.c		\
              process.c 	\
              remaplib.c     	\
              timer.c   	\
              realtime.c   	\
              pstream.c		\
              table.c		\
              userlog.c 	\
              util.c		\
              legendre.c 	\
              fourier.c  	\
	      specspace.c 	\
              readline.c  	\
              julian.c  	\
              vinterp.c		\
              zaxis.c  		\
	      pthread_debug.c 	\
	      pthread_debug.h 	\
	      color.c 	        \
	      color.h 	        \
	      list.c 	        \
	      list.h 	        \
              field.h		\
              dmemory.h		\
              dtypes.h		\
              error.h		\
              functs.h		\
              cdo.h		\
              cdo_int.h		\
              interpol.h 	\
              operator_help.h 	\
              modules.h		\
              remap.h           \
              pipe.h		\
              process.h		\
              pstream.h		\
              pstream_int.h	\
              specspace.h 	\
              vinterp.h 	\
              namelist.h 	\
              util.h		\
	      cdi.h
#
cdo_LDADD = $(LDFLAGS) -lm
#
userlog.o: userlog.c
	$(COMPILE) -DLOGPATH=${exec_prefix}/log -c `test -f '$<' || echo '$(srcdir)/'`$<
#
CLEANFILES  = `ls *~`
