## Process this file with automake to produce Makefile.in
#
bin_PROGRAMS = cdo
#
cdo_SOURCES  = cdo.c
cdo_SOURCES += Arith.c         \
               Arithc.c        \
               Arithdays.c     \
               Arithlat.c      \
               CDItest.c       \
               Cat.c           \
               Change.c        \
               Change_e5slm.c  \
               Cloudlayer.c    \
               Command.c       \
               Comp.c          \
               Compc.c         \
               Complextorect.c \
               Cond.c          \
               Cond2.c         \
               Condc.c         \
               Consecstat.c    \
               Copy.c          \
               Deltime.c       \
               Detrend.c       \
               Diff.c          \
               EOFs.c          \
               EcaIndices.c    \
               Echam5ini.c     \
               Enlarge.c       \
               Enlargegrid.c   \
               Ensstat.c       \
               Eofcoeff.c      \
               Exprf.c         \
               Filedes.c       \
               Fillmiss.c      \
               Filter.c        \
               Fldrms.c        \
               Fldstat.c       \
               Fldstat2.c      \
               Fourier.c       \
               Gather.c        \
               Gengrid.c       \
               Gradsdes.c      \
               Gridboxstat.c   \
               Gridcell.c      \
               Harmonic.c      \
               Hi.c            \
               Histogram.c     \
               IFS2ICON.c      \
               Importamsr.c    \
               Importbinary.c  \
               Importcmsaf.c   \
               Importobs.c     \
               Info.c          \
               Input.c         \
               Intgrid.c       \
               Intgridtraj.c   \
               Intlevel.c      \
               Intntime.c      \
               Inttime.c       \
               Intyear.c       \
               Invert.c        \
               Invertlev.c     \
               Log.c           \
               Maskbox.c       \
               Mastrfu.c       \
               Math.c          \
               Merge.c         \
               Mergegrid.c     \
               Mergetime.c     \
               Merstat.c       \
               Monarith.c      \
               Mrotuv.c        \
               Mrotuvb.c       \
               Ninfo.c         \
               Nmltest.c       \
               Output.c        \
               Outputgmt.c     \
               Pinfo.c         \
               Pressure.c      \
               Regres.c        \
               Remap.c         \
               Remapeta.c      \
               Replace.c       \
               Replacevalues.c \
               Rotuv.c         \
               Runpctl.c       \
               Runstat.c       \
               Scatter.c       \
               Seascount.c     \
               Seaspctl.c      \
               Seasstat.c      \
               Selbox.c        \
               Select.c        \
               Seloperator.c   \
               Selrec.c        \
               Seltime.c       \
               Selvar.c        \
               Set.c           \
               Setbox.c        \
               Setgatt.c       \
               Setgrid.c       \
               Sethalo.c       \
               Setmiss.c       \
               Setrcaname.c    \
               Settime.c       \
               Setzaxis.c      \
               Showinfo.c      \
               Sinfo.c         \
               Smooth9.c       \
               Sort.c          \
               Sorttimestamp.c \
               Specinfo.c      \
               Spectral.c      \
               Spectrum.c      \
               Split.c         \
               Splitrec.c      \
               Splitsel.c      \
               Splittime.c     \
               Splityear.c     \
               Subtrend.c      \
               Templates.c     \
               Test.c          \
               Tests.c         \
               Timcount.c      \
               Timpctl.c       \
               Timselpctl.c    \
               Timselstat.c    \
               Timsort.c       \
               Timstat.c       \
               Timstat2.c      \
               Timstat3.c      \
               Tinfo.c         \
               Tocomplex.c     \
               Transpose.c     \
               Trend.c         \
               Trms.c          \
               Tstepcount.c    \
               Vardup.c        \
               Vargen.c        \
               Varrms.c        \
               Vertint.c       \
               Vertstat.c      \
               Vertwind.c      \
               Wct.c           \
               Wind.c          \
               Writegrid.c     \
               Writerandom.c   \
               Ydayarith.c     \
               Ydaypctl.c      \
               Ydaystat.c      \
               Ydrunpctl.c     \
               Ydrunstat.c     \
               Yhourstat.c     \
               Ymonarith.c     \
               Ymonpctl.c      \
               Ymonstat.c      \
               Yseaspctl.c     \
               Yseasstat.c     \
               Zonstat.c       \
               cdo.h           \
               cdo_int.h       \
               cdo_pthread.c   \
               cdo_vlist.c     \
               color.c         \
               color.h         \
               commandline.c   \
               counter.h       \
               dmemory.h       \
               dtypes.h        \
               ecacore.c       \
               ecacore.h       \
               ecautil.c       \
               ecautil.h       \
               error.h         \
               etopo.h         \
               exception.c     \
               expr.c          \
               expr.h          \
               expr_lex.c      \
               expr_yacc.c     \
               expr_yacc.h     \
               field.c         \
               field.h         \
               field2.c        \
               fieldc.c        \
               fieldmem.c      \
               fieldmer.c      \
               fieldzon.c      \
               fouriertrans.c  \
               functs.h        \
               gradsdeslib.c   \
               gradsdeslib.h   \
               grid.c          \
               grid.h          \
               grid_gme.c      \
               grid_lcc.c      \
               grid_rot.c      \
               griddes.c       \
               griddes.h       \
               griddes_h5.c    \
               griddes_nc.c    \
               hetaeta.c       \
               hetaeta.h       \
               history.c       \
               institution.c   \
               interpol.c      \
               interpol.h      \
               job.c           \
               juldate.c       \
               legendre.c      \
               list.c          \
               list.h          \
               modules.c       \
               modules.h       \
               namelist.c      \
               namelist.h      \
               normal.c        \
               nth_element.c   \
               nth_element.h   \
               operator_help.h \
               par_io.c        \
               par_io.h        \
               percentiles.c   \
               percentiles.h   \
               pipe.c          \
               pipe.h          \
               printinfo.h     \
               process.c       \
               process.h       \
               pstream.c       \
               pstream.h       \
               pstream_int.h   \
               pthread_debug.c \
               pthread_debug.h \
               readline.c      \
               realtime.c      \
               remap.h         \
               remaplib.c      \
               specspace.c     \
               specspace.h     \
               statistic.c     \
               statistic.h     \
               table.c         \
               timebase.h      \
               timer.c         \
               userlog.c       \
               util.c          \
               util.h          \
               vinterp.c       \
               vinterp.h       \
               zaxis.c

cdo_LDADD     =
cdo_CPPFLAGS  =

cdo_CPPFLAGS += -I$(top_srcdir)/libcdi/src
if ENABLE_CDI_SHARED
cdo_LDADD    += $(top_builddir)/libcdi/src/libcdi.la
else
cdo_LDADD    += $(top_srcdir)/libcdi/src/basetime.lo \
		$(top_srcdir)/libcdi/src/binary.lo \
		$(top_srcdir)/libcdi/src/calendar.lo \
		$(top_srcdir)/libcdi/src/cdf_int.lo \
		$(top_srcdir)/libcdi/src/cdf.lo \
		$(top_srcdir)/libcdi/src/cdi_error.lo \
		$(top_srcdir)/libcdi/src/cdiFortran.lo \
		$(top_srcdir)/libcdi/src/cdi_util.lo \
		$(top_srcdir)/libcdi/src/cgribexlib.lo \
		$(top_srcdir)/libcdi/src/dmemory.lo \
		$(top_srcdir)/libcdi/src/error.lo \
		$(top_srcdir)/libcdi/src/extralib.lo \
		$(top_srcdir)/libcdi/src/file.lo \
		$(top_srcdir)/libcdi/src/gaussgrid.lo \
		$(top_srcdir)/libcdi/src/gribapi.lo \
		$(top_srcdir)/libcdi/src/grid.lo \
		$(top_srcdir)/libcdi/src/ieglib.lo \
		$(top_srcdir)/libcdi/src/institution.lo \
		$(top_srcdir)/libcdi/src/model.lo \
		$(top_srcdir)/libcdi/src/servicelib.lo \
		$(top_srcdir)/libcdi/src/stream_cdf.lo \
		$(top_srcdir)/libcdi/src/stream_cgribex.lo \
		$(top_srcdir)/libcdi/src/stream_ext.lo \
		$(top_srcdir)/libcdi/src/stream_grb.lo \
		$(top_srcdir)/libcdi/src/stream_gribapi.lo \
		$(top_srcdir)/libcdi/src/stream_history.lo \
		$(top_srcdir)/libcdi/src/stream_ieg.lo \
		$(top_srcdir)/libcdi/src/stream_int.lo \
		$(top_srcdir)/libcdi/src/stream.lo \
		$(top_srcdir)/libcdi/src/stream_record.lo \
		$(top_srcdir)/libcdi/src/stream_srv.lo \
		$(top_srcdir)/libcdi/src/stream_var.lo \
		$(top_srcdir)/libcdi/src/swap.lo \
		$(top_srcdir)/libcdi/src/table.lo \
		$(top_srcdir)/libcdi/src/taxis.lo \
		$(top_srcdir)/libcdi/src/timebase.lo \
		$(top_srcdir)/libcdi/src/tsteps.lo \
		$(top_srcdir)/libcdi/src/util.lo \
		$(top_srcdir)/libcdi/src/varscan.lo \
		$(top_srcdir)/libcdi/src/version.lo \
		$(top_srcdir)/libcdi/src/vlist.lo \
		$(top_srcdir)/libcdi/src/vlist_att.lo \
		$(top_srcdir)/libcdi/src/vlist_var.lo \
		$(top_srcdir)/libcdi/src/zaxis.lo
endif
cdo_LDADD +=    @NETCDF_LDFLAGS@ \
		@HDF5_LDFLAGS@ \
		@GRIB_API_LDFLAGS@ \
		@ZLIB_LDFLAGS@ \
		@SZLIB_LDFLAGS@ \
		@PROJ_LDFLAGS@ \
		@LDFLAGS@ \
		@LIBS@

noinst_PROGRAMS  = cdotest
cdotest_SOURCES  = cdo_int.h	\
	           cdotest.c
cdotest_LDADD    = $(cdo_LDADD)
cdotest_CPPFLAGS = $(cdo_CPPFLAGS)

userlog.o: userlog.c config.h
	$(COMPILE) -DLOGPATH=${exec_prefix}/log -c `test -f '$<' || echo '$(srcdir)/'`$<
#
CLEANFILES  = `ls *~`
